# edgebase

./: AGENTS.md  CONSOLIDATION.md  Makefile  README.md  docker-compose.yml
db/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  test_mock_server.sh  test_verification.sh
db/.kiro/specs/iot-data-sync/: design.md  requirements.md  tasks.md
db/edge-agent/: Cargo.toml
db/edge-agent/examples/: insert_sample_data.rs
db/edge-agent/src/: db.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  security.rs  sync.rs  telemetry.rs
db/migrations/: 001_initial_schema.sql
db/sync-service/: Cargo.toml
db/sync-service/src/: handlers.rs  main.rs  models.rs  repository.rs
functions/: .gitignore  Cargo.toml  Dockerfile  NEXT_STEPS.md  README.md  REQUIREMENT3_IMPLEMENTATION.md  ROUTING.md  SPEC.md  test_heartbeat.sh  test_integration.sh  test_routing.sh
functions/.kiro/specs/wasmEdge-edge-functions/: design.md  requirements.md  tasks.md
functions/.kiro/specs/wasmedge-edge-platform/: design.md  requirements.md
functions/control-plane/: Cargo.toml
functions/control-plane/src/: main.rs
functions/edge-runner/: API.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md
functions/edge-runner/src/: cache.rs  config.rs  lib.rs  main.rs  metrics.rs
functions/edge-runner/src/application/: dto.rs  mod.rs  services.rs
functions/edge-runner/src/domain/: cache_models.rs  mod.rs  models.rs  repository.rs
functions/edge-runner/src/infrastructure/: artifact_downloader.rs  cache.rs  cache_repository.rs  cp_client.rs  db.rs  deployment_handler.rs  error_handler.rs  heartbeat_manager.rs  metrics.rs  metrics_collector.rs  mod.rs  pool.rs  rate_limiter.rs  repositories.rs  route_manager.rs  routing_tests.rs  security.rs  version_manager.rs  wasm_runtime.rs
functions/edge-runner/src/presentation/: handlers.rs
functions/edge-runner/tests/: integration_tests.rs
functions/hello-world/: Cargo.toml
functions/hello-world/src/: lib.rs
platform/.kiro/specs/edge-sync-control-plane/: design.md  requirements.md  tasks.md
platform/control-plane/: Dockerfile  Makefile  go.mod  go.sum
platform/control-plane/cmd/server/: main.go
platform/control-plane/internal/config/: config.go
platform/control-plane/internal/db/: db.go
(+23 files in other folders)
