[package]
name = "edge-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "edge_agent"
path = "src/lib.rs"

[[bin]]
name = "edge-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
