[package]
name = "edge-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmer = "4.2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
prometheus = "0.13"
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
